ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  spec:
    rules:
      - host: test.info
        http:
          paths:
            - path: /users
              pathType: Prefix
              backend:
                service:
                  name: user-service
                  port:
                    number: 80
